src/test/deca/syntax/parser/invalid/decl_var_multiple_number.deca
// Test de parser, le deuxieme ident est remplacé par un 
// nombre

{
    int x, 15 = 5,8;
}